--- a/.render.yaml
+++ b/.render.yaml
@@ -2,7 +2,7 @@ services:
   - type: web
     name: fastapi-etdrs
     env: python
-    buildCommand: cd server && pip install -r requirements.txt
+    buildCommand: pip install -r requirements.txt
     startCommand: uvicorn main:app --host 0.0.0.0 --port 10000
     workingDir: server
     plan: free
